--- a/LungDiseaseDiagnosis/appsettings.json
+++ b/LungDiseaseDiagnosis/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=LD.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
